Allow larger simulation flows